CreateTestProject, fix warnings